<resources>
    <string name="app_name">PymesControl</string>
    <string name="login_incorrecto">Correo o contraseña incorrecto</string>
    <string name="login_correo">Correo</string>
    <string name="login_pwd">Contraseña</string>
    <string name="login_ingresar">Ingresar</string>
    <string name="login_leyenda">PymesControl 2018 - Sistema de facturación en línea v1.0.0</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_facturas">Facturas</string>
    <string name="nav_cotizaciones">Cotizaciones</string>
    <string name="nav_catalogos">Catalogos</string>
    <string name="frag_pys">Productos y servicios</string>
    <string name="frag_clientes">Clientes</string>
    <string name="frag_cuantas_bancarias">Cuentas bancarias</string>
    <string name="factura_card_timbrada">Timbrada</string>
    <string name="factura_card_notimbrada">No timbrada</string>
    <string name="app_bar_menu_logout">Logout</string>
    <string name="app_bar_menu_enviar">Enviar</string>
</resources>
