<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogIn"
    android:orientation="vertical"
    android:background="@color/colorMediumGrayBackground"
    android:padding="20dp">
    <TextView
        android:id="@+id/login_incorrecto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorLightGrayText"
        android:visibility="gone"
        android:layout_above="@id/login_correo"
        android:textSize="@dimen/text_normal"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:text="@string/login_incorrecto"/>
    <EditText
        android:id="@+id/login_correo"
        style="@style/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/login_pswd"
        android:hint="@string/login_correo"
        android:inputType="textEmailAddress" />
    <EditText
        android:id="@+id/login_pswd"
        style="@style/input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/login_pwd"
        android:inputType="textPassword"
        android:layout_marginTop="10dp" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_pswd"
        android:text="@string/login_ingresar"
        android:textAllCaps="false"
        android:background="@color/colorLightBlue"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/open_sans_regular"
        android:layout_marginTop="10dp"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/login_leyenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/login_leyenda"
        android:textColor="@android:color/darker_gray"
        android:textSize="@dimen/am_d_leyenda"
        android:layout_centerHorizontal="true"
        android:layout_gravity="bottom"/>
</RelativeLayout>